--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2",
+    "discord.js-music-v11": "^1.3.4",
+    "ffmpeg-binaries": "^3.2.2-3",
     "ytdl-core": "^0.20.4"
   }
 }
